Fixed bug where Nav was too wide for 100vw

--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,6 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
     width: 100vw;
     color: white;
     height: 300px;
